tests/good/syntax/025-option.clap
val x : { None + Some int } = Some at { None + Some int } [42]

