tests/bad/syntax/060-case-7.clap
val x = 
  case { some at { Some int + None } [ x ] => 42 }

